--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,10 @@ header .my-leftBox{
 }
 
 /* ? IMAGES-------------------------------- */
-
+img[alt="codeImg"]{
+    width: 25px;
+    clip-path: circle();
+}
 
 /* ? NAVBAR-------------------------------- */
 header .my-leftBox, header .my-rightBox{
