--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ main .my-leftBox, main .my-rightBox{
     height: calc(100vh - var(--header-height));
 }
 
-@media screen and (max-width: 500px){
+@supports (height: 100dvh){
     /* uso DynamicVH per risolvere problema altezza mobile */
     /* ! ATTENZIONE: funzione nuova e ancora poco supportata */
     main .my-leftBox, main .my-rightBox{
